--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,15 @@ Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 librosa==0.7.1
-matplotlib==3.1.1
-numpy==1.17.2
+matplotlib
+numpy==1.16.0
 pandas==0.25.2
 praat-parselmouth==0.3.3
 pydub==0.23.1
 pyquaternion==0.9.5
-pysptk==0.1.17
-python-speech-features==0.6
-scikit-learn==0.21.3
-scipy==1.3.1
+pysptk
+python-speech-features
+scikit-learn
+scipy
 seaborn==0.7.1
+tensorflow-gpu== 2.2.1
